# AudioPluginTemplate

./: .gitignore  CMakeLists.txt  README.md
source/: Main.cpp  PluginProcessor.h  PluginUI.h  Sf2Engine.h  config.h
template/: cmakeVar.h.tpl
